# rusty-craby

./: .envrc.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
scripts/: cross-build.sh  cross-test.sh  musl-build.sh  musl-test.sh
src/: commands.rs  currency.rs  help.rs  jisho.rs  main.rs  tubby.rs  utils.rs  waifu.rs  wk_levels.rs  xe.rs
src/commands/: help.rs  jisho.rs  ping.rs  tubby.rs  waifu.rs  xe.rs
src/commands/tubby/: helpers.rs
src/commands/xe/: helpers.rs  structs.rs
src/currency/: currency.rs  ensure.rs  helpers.rs  mod.rs  structs.rs
src/jisho/: helpers.rs  structs.rs
src/tubby/: helpers.rs  structs.rs
src/utils/: handle_event.rs
src/wkapi/: api_tokens.rs  ensure.rs  helpers.rs  mod.rs  structs.rs  user.rs
