[package]
name = "rusty-craby"
version = "0.2.0"
authors = ["Drew Hutton <Yoroshi> <drew.hutton@pm.me>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
tokio = { version = "1.5.0", features = ["full"] }
twilight-cache-inmemory = "0.3"
twilight-gateway = "0.3"
twilight-http = "0.3"
twilight-model = "0.3"
twilight-command-parser = "0.3"
twilight-embed-builder = "0.3"
twilight-mention = "0.3"
