[package]
name = "rusty-craby"
version = "0.2.1"
authors = ["Drew Hutton <Yoroshi> <drew.hutton@pm.me>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
tokio = { version = "1.8.4", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
twilight-cache-inmemory = "0.3"
twilight-gateway = "0.3"
twilight-http = "0.3"
twilight-model = "0.3"
twilight-command-parser = "0.3"
twilight-embed-builder = "0.3"
twilight-mention = "0.3"

[profile.release]
lto = true
incremental = false
opt-level = "z"